<resources>
    <string name="app_name">最美食商户后台</string>
    <string name="full_app_name">最美食商户订单管理应用</string>
    <string name="action_settings">设置</string>
    <string name="action_logout">注销</string>
    <string name="login">登录</string>

    <string name="tab_menu_order">所有订单</string>
    <string name="tab_menu_todayOrder">今日就餐</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>

    <string name="dialog_order_number">订单号: </string>
    <string name="dialog_order_user">预订人: </string>
    <string name="dialog_order_userVipLevel">用户类别: </string>
    <string name="dialog_order_phoneId">联系方式: </string>
    <string name="dialog_order_createTime">下单时间: </string>
    <string name="dialog_order_dinnerNum">就餐人数: </string>
    <string name="dialog_order_orderTime">就餐时间: </string>
    <string name="dialog_order_orderSum">订单金额: </string>
    <string name="dialog_order_state">订单状态: </string>

    <string name="no_today_order">今天无人就餐\n&#160;&#160;&#160;&#160;点击刷新</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
